# nao-dynamics-imitation

./: .gitignore  CMakeLists.txt  README.md  not_balanced.cpp  qiproject.xml  robot.h  robot_v3.cpp  robot_v3.h  start  xsens_imitation_v7.cpp  xsens_tool.cpp  xsens_tool.h
Jacobian/: CMakeLists.txt  DGM.cpp  DGM_rectified.cpp  Jacobian.h
copellia_scenes/: NAO.ttt
flowchart/: flowchart.drawio
include/: balance_control.h  dynamics_param.h  robot.h  vrep_sim_handler.h  xsens_tool.h  zmp_control.h
libs/Jacobian/: CMakeLists.txt  qiproject.xml
libs/Jacobian/include/: Jacobian.h
libs/Jacobian/libs/: libJACOBIAN.dylib
libs/Jacobian/src/: DGM.cpp  DGM_rectified.cpp  DGM_rectified2.cpp  DGM_wrt_RF.cpp  DKM.cpp  DKM_wrt_RF.cpp
libs/qpOASES/libs/: libqpOASES.dylib
libs/vrep/include/: extApi.h  extApiInternal.h
libs/vrep/src/: extApi.c  extApiPlatform.c
recordings/dynamics/mvn/: hands_up.mvn  left_arm_up.mvn  right_arm_up.mvn
recordings/dynamics/mvnx/: bending_down.mvnx  left_arm_up.mvnx  right_arm_up.mvnx
recordings/mvn/: front_lean.mvn
recordings/mvnx/: both_hands_up.mvnx
report/: .aux  biblio.bib  conclusion.aux  conclusion.tex  dynamcis_based_imitation.aux  dynamcis_based_imitation.tex  experimental_setup.aux  experimental_setup.tex  implementation.aux  implementation.tex  introduction.aux  introduction.tex  report.aux  report.bbl  report.blg  report.dvi  report.fdb_latexmk  report.fls  report.lof  report.lot  report.out  report.tex  report.toc  state_of_the_art.aux  state_of_the_art.tex  task_specification.aux  task_specification.tex  thesisfront.aux  thesisfront.tex  thesisreport.cls
scripts/: mvnx_parser.py  mvnx_plotter.py  mvnx_streamer.py  mvnx_udp_streamer.py  udp_receiver.py  utils.py
src/: balance_control.cpp  dynamics_param.cpp  main.cpp  robot.cpp  simulation_test.cpp  simulation_test_2.cpp  vrep_sim_handler.cpp  xsens_imitation.cpp  xsens_imitation_.cpp  xsens_imitation_2.cpp  xsens_imitation_sim.cpp  xsens_imitation_v7.cpp  xsens_tool.cpp  zmp_control.cpp
src/test/: imitation_coop.cpp  multi_robot.cpp
src/utils/: xsens_data_plot.cpp
